argocd/https-route-argocd-server.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - name: public
      sectionName: wildcard-domain-https
      namespace: kube-system
  hostnames:
    - "argocd.mh.internal"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-cd-argocd-server
          namespace: argocd
          port: 80
